# consult-user-mcp

./: .gitignore  README.md  bun.lockb  package.json
.beads/: issues.jsonl
.github/workflows/: linux-appimage.yml  macos-build.yml
dialog-cli/: Package.swift  dialog-cli.swift
dialog-cli-qt/: CMakeLists.txt
dialog-cli-qt/appimage/: consult-user-dialog.desktop
dialog-cli-qt/qml/: Main.qml  qml.qrc
dialog-cli-qt/qml/components/: ChoiceList.qml  ChooseDialog.qml  ConfirmDialog.qml  QuestionsDialog.qml  TextInputDialog.qml  Toolbar.qml
dialog-cli-qt/src/: main.cpp
dialog-cli/Sources/DialogCLI/: Main.swift
dialog-cli/Sources/DialogCLI/Components/: Buttons.swift  ChoiceCard.swift  DialogComponents.swift  DialogToolbar.swift  KeyboardHints.swift
dialog-cli/Sources/DialogCLI/Dialogs/: AccordionDialog.swift  ChooseDialog.swift  QuestionnaireDialog.swift  WizardDialog.swift
dialog-cli/Sources/DialogCLI/Models/: QuestionModels.swift  RequestModels.swift  ResponseModels.swift
dialog-cli/Sources/DialogCLI/Services/: DialogManager.swift  FocusManager.swift
dialog-cli/Sources/DialogCLI/Theme/: Theme.swift
dialog-cli/Sources/DialogCLI/Window/: BorderlessWindow.swift
macos-app/Sources/: ConsultUserMCPApp.swift  InstallGuideView.swift  SettingsView.swift  SpeakSettingsApp.swift
mcp-server/: README.md  package.json
mcp-server/src/: index.ts  types.ts
mcp-server/src/providers/: applescript.ts  interface.ts  platform.ts  qml.ts  swift.ts
